@@ -2,7 +2,7 @@
 <!DOCTYPE section PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN" "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd" [
 <!ENTITY % BOOK_ENTITIES SYSTEM "Users_Guide.ent">
 ]>
-    <section id="sect-Users_Guide-Linux_operating_systems-OpenSuse_12">
+<section conformance="233" id="sect-Users_Guide-Linux_operating_systems-OpenSuse_12">
       <title>OpenSuse 12</title>
 
       <para><application>Publican</application> has not been usable on
@@ -278,8 +278,7 @@ Variable 'epub.embedded.fonts' has not been declared.
           </note>
 
           <para>Using the <application>Dolphin</application> file manager, you
-          can browse to <filename
-          class="directory">SourceCode/TestPublican/tmp/en-US/</filename> and
+          can browse to <filename class="directory">SourceCode/TestPublican/tmp/en-US/</filename> and
           view the various output formats that you find there.</para>
         </step>
       </procedure>
