@@ -2114,111 +2114,9 @@ valign: <xsl:value-of select="@valign"/></xsl:message>
     <xsl:if test="../@pgwide=1 or local-name(.) = 'entrytbl'">
       <xsl:attribute name="width">100%</xsl:attribute>
     </xsl:if>
-
-    <xsl:choose>
-      <xsl:when test="$table.borders.with.css != 0">
-        <xsl:attribute name="border">0</xsl:attribute>
-        <xsl:choose>
-          <xsl:when test="../@frame='all' or (not(../@frame) and $default.table.frame='all')">
-            <xsl:attribute name="style">
-              <xsl:text>border-collapse: collapse;</xsl:text>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'top'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'bottom'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'left'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'right'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-            </xsl:attribute>
-          </xsl:when>
-          <xsl:when test="../@frame='topbot' or (not(../@frame) and $default.table.frame='topbot')">
-            <xsl:attribute name="style">
-              <xsl:text>border-collapse: collapse;</xsl:text>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'top'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'bottom'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-            </xsl:attribute>
-          </xsl:when>
-          <xsl:when test="../@frame='top' or (not(../@frame) and $default.table.frame='top')">
-            <xsl:attribute name="style">
-              <xsl:text>border-collapse: collapse;</xsl:text>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'top'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-            </xsl:attribute>
-          </xsl:when>
-          <xsl:when test="../@frame='bottom' or (not(../@frame) and $default.table.frame='bottom')">
-            <xsl:attribute name="style">
-              <xsl:text>border-collapse: collapse;</xsl:text>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'bottom'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-            </xsl:attribute>
-          </xsl:when>
-          <xsl:when test="../@frame='sides' or (not(../@frame) and $default.table.frame='sides')">
-            <xsl:attribute name="style">
-              <xsl:text>border-collapse: collapse;</xsl:text>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'left'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-              <xsl:call-template name="border">
-                <xsl:with-param name="side" select="'right'"/>
-                <xsl:with-param name="style" select="$table.frame.border.style"/>
-                <xsl:with-param name="color" select="$table.frame.border.color"/>
-                <xsl:with-param name="thickness" select="$table.frame.border.thickness"/>
-              </xsl:call-template>
-            </xsl:attribute>
-          </xsl:when>
-          <xsl:otherwise>
-            <xsl:attribute name="style">
-              <xsl:text>border-collapse: collapse;</xsl:text>
-            </xsl:attribute>
-          </xsl:otherwise>
-        </xsl:choose>
-      </xsl:when>
-      <xsl:when test="../@frame='none' or (not(../@frame) and $default.table.frame='none') or local-name(.) = 'entrytbl'">
-        <xsl:attribute name="border">0</xsl:attribute>
-      </xsl:when>
-      <xsl:otherwise>
-        <xsl:attribute name="border">1</xsl:attribute>
-      </xsl:otherwise>
-    </xsl:choose>
-
+<!--
+snip border rubbish. BZ #875967
+-->
     <xsl:variable name="colgroup">
       <colgroup>
         <xsl:call-template name="generate.colgroup">
